# cmake_example

./: README.md
t1/: CMakeLists.txt  cmakelists.txt  main.cpp  readme.org
t2/: CMakeLists.txt  cmakelists.txt
t2/src/: CMakeLists.txt  cmakelists.txt  main.cpp
t3/: CMakeLists.txt  readme.org
t3/src/: CMakeLists.txt  hello.cpp  hello.hpp
t4/: CMakeLists.txt  readme.org
t4/src/: main.cpp
